Responsive Tablet. Nuevas clases a los articulos de la tabla

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Marpaq S.A. - Productos Químicos</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700&display=swap" rel="stylesheet">
@@ -76,57 +77,51 @@
                     <!--- Buscará dentro de los productos de la tabla --->
                     <input type="submit" value="Buscar" class="boton" />
                     <div class="listadoProductos">
-                        <div class="encabezadoTabla">Nombre</div>
-                        <div class="encabezadoTabla">Tipo de Uso</div>
-                        <div class="encabezadoTabla">Origen</div>
-                        <div>Acido Acético</div>
-                        <div>Industrial - Curtiembre</div>
-                        <div>China - USA</div>
-                        <div>Acido Clorhídrico</div>
-                        <div>Industrial - Fertilizante</div>
-                        <div>China</div>
-                        <div>Bicarbonato de Sodio</div>
-                        <div>Industrial - Farmaceutica</div>
-                        <div>Francia</div>
-                        <div>Acido Acético</div>
-                        <div>Industrial - Curtiembre</div>
-                        <div>China - USA</div>
-                        <div>Acido Clorhídrico</div>
-                        <div>Industrial - Fertilizante</div>
-                        <div>China</div>
-                        <div>Carbonato de Potasio</div>
-                        <div>Industrial - Farmaceutica</div>
-                        <div>Francia</div>
-                        <div>Acido Polo</div>
-                        <div>Industrial - Curtiembre</div>
-                        <div>China - USA</div>
-                        <div>Acido Clorhídrico</div>
-                        <div>Industrial - Fertilizante</div>
-                        <div>China</div>
-                        <div>Bicarbonato de Sodio</div>
-                        <div>Industrial - Farmaceutica</div>
-                        <div>Francia</div>
-                        <div>Acido Acético</div>
-                        <div>Industrial - Curtiembre</div>
-                        <div>China - Noruega</div>
-                        <div>Acido Clorhídrico</div>
-                        <div>Industrial - Fertilizante</div>
-                        <div>China</div>
-                        <div>Bicarbonato de Sodio</div>
-                        <div>Industrial - Farmaceutica</div>
-                        <div>Francia</div>
-                        <div>Bicarbonato de Sodio</div>
-                        <div>Industrial - Farmaceutica</div>
-                        <div>Francia</div>
-                        <div>Acido Acético</div>
-                        <div>Industrial - Curtiembre</div>
-                        <div>China - USA</div>
-                        <div>Acido Clorhídrico</div>
-                        <div>Industrial - Fertilizante</div>
-                        <div>China</div>
-                        <div>Bicarbonato de Sodio</div>
-                        <div>Industrial - Farmaceutica</div>
-                        <div>Francia</div>
+                        <div class="encabezadoTabla ProductoTabla">Nombre</div>
+                        <div class="encabezadoTabla TipoTabla">Tipo de Uso</div>
+                        <div class="encabezadoTabla OrigenTabla">Origen</div>
+                        <div class="ProductoTabla">Acido Acético</div>
+                        <div class="TipoTabla">Industrial - Curtiembre</div>
+                        <div class="OrigenTabla">China - USA</div>
+                        <div class="ProductoTabla">Acido Clorhídrico</div>
+                        <div class="TipoTabla">Industrial - Fertilizante</div>
+                        <div class="OrigenTabla">China</div>
+                        <div class="ProductoTabla">Bicarbonato de Sodio</div>
+                        <div class="TipoTabla">Industrial - Farmaceutica</div>
+                        <div class="OrigenTabla">Francia</div>
+                        <div class="ProductoTabla">Acido Acético</div>
+                        <div class="TipoTabla">Industrial - Curtiembre</div>
+                        <div class="OrigenTabla">China - USA</div>
+                        <div class="ProductoTabla">Acido Clorhídrico</div>
+                        <div class="TipoTabla">Industrial - Fertilizante</div>
+                        <div class="OrigenTabla">China</div>
+                        <div class="ProductoTabla">Carbonato de Potasio</div>
+                        <div class="TipoTabla">Industrial - Farmaceutica</div>
+                        <div class="OrigenTabla">Francia</div>
+                        <div class="ProductoTabla">Acido Polo</div>
+                        <div class="TipoTabla">Industrial - Curtiembre</div>
+                        <div class="OrigenTabla">China - USA</div>
+                        <div class="ProductoTabla">Acido Clorhídrico</div>
+                        <div class="TipoTabla">Industrial - Fertilizante</div>
+                        <div class="OrigenTabla">China</div>
+                        <div class="ProductoTabla">Bicarbonato de Sodio</div>
+                        <div class="TipoTabla">Industrial - Farmaceutica</div>
+                        <div class="OrigenTabla">Francia</div>
+                        <div class="ProductoTabla">Acido Clorhídrico</div>
+                        <div class="TipoTabla">Industrial - Fertilizante</div>
+                        <div class="OrigenTabla">China</div>
+                        <div class="ProductoTabla">Carbonato de Potasio</div>
+                        <div class="TipoTabla">Industrial - Farmaceutica</div>
+                        <div class="OrigenTabla">Francia</div>
+                        <div class="ProductoTabla">Acido Polo</div>
+                        <div class="TipoTabla">Industrial - Curtiembre</div>
+                        <div class="OrigenTabla">China - USA</div>
+                        <div class="ProductoTabla">Acido Clorhídrico</div>
+                        <div class="TipoTabla">Industrial - Fertilizante</div>
+                        <div class="OrigenTabla">China</div>
+                        <div class="ProductoTabla">Bicarbonato de Sodio</div>
+                        <div class="TipoTabla">Industrial - Farmaceutica</div>
+                        <div class="OrigenTabla">Francia</div>
                     </div>
             </section>
             <section id="servicios">
