--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700&display=swap" rel="stylesheet">
 </head>
 
@@ -16,7 +17,9 @@
     <div class="contenedorGeneral">
         <header class="navegacion" id="inicio">
             <a href="index.html"><img src="images/logo.png" class="logo" alt="logo"></a>
-            <nav>
+            <input type="checkbox" id="btn-menu">
+            <label for="btn-menu"><img src="images/menu.png" alt="botonmenu"></label>
+            <nav class="menu">
                 <ul>
                     <li><a href="#sobrenosotros">Sobre Nosotros</a></li>
                     <li><a href="#productos">Productos</a></li>
