Animaciones Agregadas Botones y Cards

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         2051-8088/8080</i>
                 </h3>
             </div>
-            <a href="#productos" class="boton botonEncabezado">Listado de Productos</a>
+            <a href="#productos" class="boton botonEncabezado hvr-grow-shadow">Listado de Productos</a>
         </div>
         <main class="contenido">
             <section id="sobrenosotros">
@@ -45,11 +45,8 @@
                 <div class="contenedorSobreNosotros">
                     <div class="sobreNosotrosTexto">
                         <p>Desde 1978, en Marpaq S.A. nos hemos desarrollado como <b>importadores y distribuidores</b>
-                            de
-                            materias
-                            primas e insumos para la industria y el campo, cumpliendo y adaptandonos a las necesidades
-                            del
-                            mercado.</p>
+                            de materias primas e insumos para la industria y el campo, cumpliendo y adaptandonos a las
+                            necesidades del mercado.</p>
                         <p>Estamos ubicados en el <b>Parque Industrial de Lanús</b> y contamos con depósitos de 8500 m2
                             cubiertos con
                             playa de carga y descarga de 1500 m2. Nuestras oficinas administrativas se encuentran dentro
@@ -78,7 +75,7 @@
                 <form action="https://formspree.io/f/xjvlapwy" method="POST">
                     <input type="search" id="busqueda" name="q" class="inputTexto">
                     <!--- Buscará dentro de los productos de la tabla --->
-                    <input type="submit" value="Buscar" class="boton" />
+                    <input type="submit" value="Buscar" class="boton hvr-grow-shadow" />
                     <div class="listadoProductos">
                         <div class="encabezadoTabla ProductoTabla">Nombre</div>
                         <div class="encabezadoTabla TipoTabla">Tipo de Uso</div>
@@ -130,7 +127,7 @@
             <section id="servicios">
                 <h2>Servicios</h2>
                 <div class="contenedorServicios">
-                    <div class="serviciosCard">
+                    <div class="serviciosCard hvr-float">
                         <img src="images/camion.png" alt="Camion">
                         <h4>Logística Integral</h4>
                         <p>Contamos con una flota de camiones y personal capacitado, cumpliendo así con el plazo de
@@ -141,7 +138,7 @@
                             el
                             traslado de sustancias reguladas por organismos nacionales.</p>
                     </div>
-                    <div class="serviciosCard">
+                    <div class="serviciosCard hvr-float">
                         <img src="images/manos.png" alt="Manos estrechadas">
                         <h4>Atención Personalizada</h4>
                         <p>Nos adaptamos a las necesidades y requerimientos que nuestros clientes solicitan para
@@ -149,7 +146,7 @@
                             un
                             servicio único y permanente.</p>
                     </div>
-                    <div class="serviciosCard">
+                    <div class="serviciosCard hvr-float">
                         <img src="images/tilde.png" alt="Tilde verificado">
                         <h4>Certificaciones especiales</h4>
                         <p>Contamos con la certificación internacional RINA ISO 9001 y ofrecemos etiquetado SGA para
@@ -173,7 +170,7 @@
                             <label>Consulta</label><br>
                             <textarea name="consulta" maxlength="500" required class="inputTexto"
                                 placeholder="Máximo 500 caracteres."></textarea><br>
-                            <input type="submit" name="Consulta" class="boton">
+                            <input type="submit" name="Consulta" class="boton hvr-grow-shadow">
                         </form>
                     </div>
                     <div class="contenedorImagen">
