--- a/index.html
+++ b/index.html
@@ -1,4 +1,89 @@
-<!DOCTYPE html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Marpaq S.A. Productos Químicos</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700&display=swap" rel="stylesheet">
+    <link href="stylebootstrap.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg bg-light sticky-top py-2 border-bottom">
+        <div class="container">
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="logo" alt="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#sobrenosotros">Sobre Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#productos">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#servicios">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contacto">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div id="encabezado" class="px-5 my-5 py-5 text-center">
+        <h1 class="display-5 fw-bold py-4">Productos Químicos para la Industria</h1>
+        <div class="col-lg-8 mx-auto">
+            <p class="lead mb-4 py-2">Desde 1978, nos hemos desarrollado como <b>importadores y distribuidores</b>
+                de materias primas e insumos para la industria y el campo, cumpliendo y adaptandonos a las
+                necesidades del mercado.
+            </p>
+            <div class="py-2 d-grid gap-3 d-sm-flex justify-content-sm-center">
+                <button id="botonEncabezado" type="button"
+                    class="btn btn-primary btn-lg px-4 gap-3 hvr-grow-shadow">Nuestros Productos</button>
+                <button type="button" class="btn btn-outline-secondary btn-lg px-4 hvr-grow-shadow">Contacto</button>
+            </div>
+        </div>
+    </div>
+    <section class="container">
+
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -28,7 +113,6 @@
                 </ul>
             </nav>
         </header>
-        <!--- Comienza el contenido --->
         <div id="encabezado" class="fondoEncabezado">
             <div class="textoEncabezado">
                 <h1 class="prodquimEncabezado">Productos Químicos para la Industria</h1>
@@ -71,10 +155,8 @@
             </section>
             <section id="productos">
                 <h2>Listado de Productos</h2>
-                <!---La tabla contará con muchos mas productos. --->
                 <form action="https://formspree.io/f/xjvlapwy" method="POST">
                     <input type="search" id="busqueda" name="q" class="inputTexto">
-                    <!--- Buscará dentro de los productos de la tabla --->
                     <input type="submit" value="Buscar" class="boton hvr-grow-shadow" />
                     <div class="listadoProductos">
                         <div class="encabezadoTabla ProductoTabla">Nombre</div>
@@ -198,4 +280,4 @@
     </div>
 </body>
 
-</html>
+</html> -->
