--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
                 necesidades del mercado.
             </p>
             <div class="py-2 d-grid gap-3 d-sm-flex justify-content-sm-center">
-                <button id="botonEncabezado" type="button"
+                <button id="botonencabezado" type="button"
                     class="btn btn-primary btn-lg px-4 gap-3 hvr-grow-shadow"><a class="nav-link" href="#productos">Nuestros Productos</a></button>
                 <button type="button" class="btn btn-outline-secondary btn-lg px-4 hvr-grow-shadow"><a class="nav-link" href="#contacto">Contacto</a></button>
             </div>
@@ -94,9 +94,9 @@
             <input type="search" id="busqueda" name="q" class="inputTexto">
             <input type="submit" value="Buscar" class="boton hvr-grow-shadow" />
             <div class="listadoProductos">
-                <div class="encabezadoTabla ProductoTabla">Nombre</div>
-                <div class="encabezadoTabla TipoTabla">Tipo de Uso</div>
-                <div class="encabezadoTabla OrigenTabla">Origen</div>
+                <div class="encabezadoTabla sticky-top ProductoTabla">Nombre</div>
+                <div class="encabezadoTabla sticky-top TipoTabla">Tipo de Uso</div>
+                <div class="encabezadoTabla sticky-top OrigenTabla">Origen</div>
                 <div class="ProductoTabla">Acido Acético</div>
                 <div class="TipoTabla">Industrial - Curtiembre</div>
                 <div class="OrigenTabla">China - USA</div>
@@ -145,7 +145,7 @@
     <section id="servicios" class="container py-4">
         <h1 class="text-center display-4 py-4 mb-4">Servicios</h1>
         <div class="row text-center align-items-baseline">
-            <div class="col-lg-4 pt-3 hvr-grow cardServicios">
+            <div class="col-lg-4 pt-3 hvr-grow cardservicios">
                 <img class="pb-2" src="images/camion.png" alt="Camion">
                 <h3 class="fw-normal fw-bold py-3">Logística Integral</h2>
                     <p class="lh-lg small">Contamos con una flota de camiones y personal capacitado, cumpliendo así con
@@ -153,13 +153,13 @@
                         de entrega que requiere el cliente. Todas las unidades cuentan con la habilitación para carga
                         peligrosa y para el traslado de sustancias reguladas por organismos nacionales.</p>
             </div>
-            <div class="col-lg-4 pt-3 rounded hvr-grow cardServicios">
+            <div class="col-lg-4 pt-3 rounded hvr-grow cardservicios">
                 <img class="pb-2" src="images/manos.png" alt="Manos">
                 <h3 class="fw-normal fw-bold py-3">Atención Personalizada</h2>
                     <p class="lh-lg small">Nos adaptamos a las necesidades y requerimientos que nuestros clientes
                         solicitan para brindarles un servicio único y permanente.</p>
             </div>
-            <div class="col-lg-4 pt-3 rounded hvr-grow cardServicios">
+            <div class="col-lg-4 pt-3 rounded hvr-grow cardservicios">
                 <img class="pb-2" src="images/tilde.png" alt="Check">
                 <h3 class="fw-normal fw-bold py-3">Certificaciones especiales</h2>
                     <p class="lh-lg small">Contamos con la certificación internacional <b>RINA ISO 9001</b> y ofrecemos
