--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Marpaq S.A. Productos Químicos</title>
+    <title>Marpaq S.A. | Productos Químicos para la Industria</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -13,13 +13,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <meta name="description"
+        content="Desde 1978, nos hemos desarrollado como uno de los importadores y distribuidores de productos químicos para la industria más importantes de Argentina.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="images/logo.png">
+    <meta property="og:title" content="Marpaq S.A. | Productos Químicos para la Industria">
+    <meta property="og:description"
+        content="Desde 1978, nos hemos desarrollado como uno de los importadores y distribuidores de productos químicos para la industria.">
 </head>
 
 <body>
     <!--nav-->
     <nav class="navbar navbar-expand-lg bg-light sticky-top py-2 border-bottom">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="images/logo.png" class="logo" alt="logo"></a>
+            <a class="navbar-brand" href="#"><img src="images/logo.png" class="logo" alt="logo de Marpaq S.A."></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -28,7 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#sobrenosotros">Sobre Nosotros</a>
+                        <a class="nav-link" aria-current="page" href="#sobre-nosotros">Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#productos">Productos</a>
@@ -44,23 +51,24 @@
         </div>
     </nav>
     <!--Encabezado-->
-    <div id="encabezado" class="px-5 my-5 py-5 text-center">
-        <h1 class="display-5 fw-bold py-4">Productos Químicos para la Industria</h1>
+    <div id="encabezado" class="px-5 px-lg-0 my-5 py-5 text-center">
+        <h1 class="display-5 fw-bold py-4">Marpaq S.A. <br> Productos Químicos para la Industria</h1>
         <div class="col-lg-8 mx-auto">
             <p class="lead mb-4 py-2">Desde 1978, nos hemos desarrollado como <b>importadores y distribuidores</b>
                 de materias primas e insumos para la industria y el campo, cumpliendo y adaptandonos a las
                 necesidades del mercado.
             </p>
             <div class="py-2 d-grid gap-3 d-sm-flex justify-content-sm-center">
-                <button id="botonencabezado" type="button"
-                    class="btn btn-primary btn-lg px-4 gap-3 hvr-grow-shadow"><a class="nav-link" href="#productos">Nuestros Productos</a></button>
-                <button type="button" class="btn btn-outline-secondary btn-lg px-4 hvr-grow-shadow"><a class="nav-link" href="#contacto">Contacto</a></button>
+                <button type="button" class="btnprimario btn btn-primary btn-lg px-4 gap-3 hvr-grow-shadow"><a
+                        class="nav-link" href="#productos">Nuestros Productos</a></button>
+                <button type="button" class="btnsecundario btn btn-outline-secondary btn-lg px-4 hvr-grow-shadow"><a class="nav-link"
+                        href="#contacto">Contacto</a></button>
             </div>
         </div>
     </div>
     <hr class="featurette-divider">
     <!--Sobre Nosotros-->
-    <section id="sobrenosotros" class="text-justify container py-4">
+    <section id="sobre-nosotros" class="text-justify container py-4">
         <div class="row">
             <h2 class="text-center display-4 py-4 mb-4">Sobre Nosotros</h2>
             <div class="col-xl-7">
@@ -78,7 +86,7 @@
             </div>
             <div class="col-xl-5">
                 <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/HOigJYx7lFk"
-                    title="Nuestros depositos" frameborder="0" alt="Video institucional"
+                    title="Nuestros depositos" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
             </div>
         </div>
@@ -88,7 +96,7 @@
         <h2 class="text-center display-4 py-4 mb-4">Productos</h2>
         <form action="https://formspree.io/f/xjvlapwy" method="POST">
             <input type="search" id="busqueda" name="q" class="inputTexto">
-            <input type="submit" value="Buscar" class="boton hvr-grow-shadow" />
+            <input type="submit" value="Buscar" class="btn hvr-grow-shadow btnformulario">
             <div class="listadoProductos">
                 <div class="encabezadoTabla sticky-top ProductoTabla">Nombre</div>
                 <div class="encabezadoTabla sticky-top TipoTabla">Tipo de Uso</div>
@@ -142,7 +150,7 @@
         <h2 class="text-center display-4 py-4 mb-4">Servicios</h2>
         <div class="row text-center align-items-baseline">
             <div class="col-lg-4 pt-3 hvr-grow cardservicios">
-                <img class="pb-2 iconservicios" src="images/camion.svg" alt="Camion">
+                <img class="pb-2 iconservicios" src="images/camion.svg">
                 <h3 class="fw-normal fw-bold py-3">Logística Integral</h2>
                     <p class="lh-lg small">Contamos con una flota de camiones y personal capacitado, cumpliendo así con
                         el plazo
@@ -150,13 +158,13 @@
                         peligrosa y para el traslado de sustancias reguladas por organismos nacionales.</p>
             </div>
             <div class="col-lg-4 pt-3 rounded hvr-grow cardservicios">
-                <img class="pb-2 iconservicios" src="images/manos.svg" alt="Manos">
+                <img class="pb-2 iconservicios" src="images/manos.svg">
                 <h3 class="fw-normal fw-bold py-3">Atención Personalizada</h2>
                     <p class="lh-lg small">Nos adaptamos a las necesidades y requerimientos que nuestros clientes
                         solicitan para brindarles un servicio único y permanente.</p>
             </div>
             <div class="col-lg-4 pt-3 rounded hvr-grow cardservicios">
-                <img class="pb-2 iconservicios" src="images/tilde.svg" alt="Check">
+                <img class="pb-2 iconservicios" src="images/tilde.svg">
                 <h3 class="fw-normal fw-bold py-3">Certificaciones especiales</h2>
                     <p class="lh-lg small">Contamos con la certificación internacional <b>RINA ISO 9001</b> y ofrecemos
                         etiquetado SGA para ofrecer a nuestros clientes la mejor calidad de atención y servicios.</p>
@@ -169,24 +177,24 @@
             <div class="col-lg-6">
                 <div class="mb-3">
                     <label for="nombre-apellido" class="form-label">Nombre y Apellido (Requerido)</label>
-                    <input type="text" class="form-control" id="nombre-apellido" required>
+                    <input type="text" class="form-control" name="nombre-apellido" id="nombre-apellido" required>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Correo Electronico (Requerido)</label>
-                    <input type="email" class="form-control" id="email" placeholder="nombre@ejemplo.com" required>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="nombre@ejemplo.com" required>
                 </div>
                 <div class="mb-3">
-                    <label for="Empresa" class="form-label">Empresa</label>
-                    <input type="text" class="form-control" id="empresa" placeholder="Ejemplo S.A.">
+                    <label for="empresa" class="form-label">Empresa</label>
+                    <input type="text" class="form-control" name="empresa" id="empresa" placeholder="Ejemplo S.A.">
                 </div>
                 <div class="mb-3">
                     <label for="consulta" class="form-label">Consulta</label>
-                    <textarea class="form-control" id="consulta" rows="4" required></textarea>
+                    <textarea class="form-control" name="consulta" id="consulta" rows="4" required></textarea>
                 </div>
-                <button type="submit" class="btn mb-3">Enviar Consulta</button>
+                <button type="submit" class="hvr-grow btn mb-3 btnformulario">Enviar Consulta</button>
             </div>
             <div class="col-lg-6 d-none d-lg-block">
-                <img class="img-fluid rounded float-end" src="images/imgcatalogo.jpg" alt="Foto del deposito">
+                <img class="img-fluid rounded float-end" src="images/imgcatalogo.jpg" alt="Deposito de Productos Químicos">
             </div>
         </div>
     </section>
@@ -195,7 +203,7 @@
         <div class="container pt-4 pb-1">
             <div class="row">
                 <div class="col-lg-8 col-md-12 mb-4 mb-md-0">
-                    <img class="mb-4" src="images/logoblanco.png" alt="logo" width="150">
+                    <img class="mb-4" src="images/logoblanco.png" alt="logo de Marpaq S.A." width="150">
                     <p>
                         Blanco Encalada 3379 - Lanús Este - B1824JEY<br>Buenos Aires - Argentina
                     </p>
@@ -204,7 +212,7 @@
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0 d-none d-lg-block">
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#sobrenosotros" class="text-white">Sobre Nosotros</a>
+                            <a href="#sobre-nosotros" class="text-white">Sobre Nosotros</a>
                         </li>
                         <li>
                             <a href="#productos" class="text-white">Productos</a>
