--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
             </div>
         </div>
     </div>
-    <hr class="featurette-divider">
     <!--Sobre Nosotros-->
     <section id="sobre-nosotros" class="text-justify container py-4">
         <div class="row">
@@ -96,7 +95,7 @@
         <h2 class="text-center display-4 py-4 mb-4">Productos</h2>
         <form action="https://formspree.io/f/xjvlapwy" method="POST">
             <input type="search" id="busqueda" name="q" class="inputTexto">
-            <input type="submit" value="Buscar" class="btn hvr-grow-shadow btnformulario">
+            <input type="submit" value="Buscar" class="btn">
             <div class="listadoProductos">
                 <div class="encabezadoTabla sticky-top ProductoTabla">Nombre</div>
                 <div class="encabezadoTabla sticky-top TipoTabla">Tipo de Uso</div>
@@ -150,22 +149,22 @@
         <h2 class="text-center display-4 py-4 mb-4">Servicios</h2>
         <div class="row text-center align-items-baseline">
             <div class="col-lg-4 pt-3 hvr-grow cardservicios">
-                <img class="pb-2 iconservicios" src="images/camion.svg">
-                <h3 class="fw-normal fw-bold py-3">Logística Integral</h2>
+                <img class="pb-2 iconservicios" src="images/camion.svg" alt="Camion">
+                <h3 class="fw-normal fw-bold py-3">Logística Integral</h3>
                     <p class="lh-lg small">Contamos con una flota de camiones y personal capacitado, cumpliendo así con
                         el plazo
                         de entrega que requiere el cliente. Todas las unidades cuentan con la habilitación para carga
                         peligrosa y para el traslado de sustancias reguladas por organismos nacionales.</p>
             </div>
             <div class="col-lg-4 pt-3 rounded hvr-grow cardservicios">
-                <img class="pb-2 iconservicios" src="images/manos.svg">
-                <h3 class="fw-normal fw-bold py-3">Atención Personalizada</h2>
+                <img class="pb-2 iconservicios" src="images/manos.svg" alt="Apreton de manos">
+                <h3 class="fw-normal fw-bold py-3">Atención Personalizada</h3>
                     <p class="lh-lg small">Nos adaptamos a las necesidades y requerimientos que nuestros clientes
                         solicitan para brindarles un servicio único y permanente.</p>
             </div>
             <div class="col-lg-4 pt-3 rounded hvr-grow cardservicios">
-                <img class="pb-2 iconservicios" src="images/tilde.svg">
-                <h3 class="fw-normal fw-bold py-3">Certificaciones especiales</h2>
+                <img class="pb-2 iconservicios" src="images/tilde.svg" alt="Tilde">
+                <h3 class="fw-normal fw-bold py-3">Certificaciones especiales</h3>
                     <p class="lh-lg small">Contamos con la certificación internacional <b>RINA ISO 9001</b> y ofrecemos
                         etiquetado SGA para ofrecer a nuestros clientes la mejor calidad de atención y servicios.</p>
             </div>
