--- a/index.html
+++ b/index.html
@@ -51,31 +51,30 @@
         </div>
     </nav>
     <!--Encabezado-->
-    <div id="encabezado" class="px-5 px-lg-0 my-5 py-5 text-center">
+    <div id="encabezado" class="px-5 px-lg-0 my-5 py-5 text-center fadein">
         <h1 class="display-5 fw-bold py-4">Marpaq S.A. <br> Productos Químicos para la Industria</h1>
         <div class="col-lg-8 mx-auto">
             <p class="lead mb-4 py-2">Desde 1978, nos hemos desarrollado como <b>importadores y distribuidores</b>
                 de materias primas e insumos para la industria y el campo, cumpliendo y adaptandonos a las
                 necesidades del mercado.
             </p>
-            <div class="py-2 d-grid gap-3 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btnprimario btn btn-primary btn-lg px-4 gap-3 hvr-grow-shadow"><a
-                        class="nav-link" href="#productos">Nuestros Productos</a></button>
-                <button type="button" class="btnsecundario btn btn-outline-secondary btn-lg px-4 hvr-grow-shadow"><a class="nav-link"
-                        href="#contacto">Contacto</a></button>
+            <div class="contenedorBoton py-2 d-grid gap-4 d-sm-flex justify-content-sm-center">
+                <button type="button" class="btnprimario btn btn-lg m-1 hvr-grow-shadow"><a class="nav-link" href="#productos">Nuestros Productos</a></button>
+                <button type="button" class="btnsecundario btn btn-lg m-1 hvr-grow-shadow"><a class="nav-link" href="#contacto">Contacto</a></button>
             </div>
         </div>
     </div>
+    <hr class="featurette-divider">
     <!--Sobre Nosotros-->
-    <section id="sobre-nosotros" class="text-justify container py-4">
+    <section id="sobre-nosotros" class="text-justify container py-5 fadein">
         <div class="row">
-            <h2 class="text-center display-4 py-4 mb-4">Sobre Nosotros</h2>
+            <h2 class="text-center display-4 py-5 mb-1">Sobre Nosotros</h2>
             <div class="col-xl-7">
                 <p class="small lh-lg">Estamos ubicados en el <b>Parque Industrial de Lanús</b> y contamos con depósitos
                     de 8500 m2 cubiertos con playa de carga y descarga de 1500 m2. Nuestras oficinas administrativas se
                     encuentran dentro
                     del mismo predio garantizando así que se cumplan los requerimientos de nuestros clientes.</p>
-                <p class="small lh-lg">Comenzando como una empresa familiar, logramos expandirnos y crecer como uno de
+                <p class="small lh-lg mb-xl-2 mb-4">Comenzando como una empresa familiar, logramos expandirnos y crecer como uno de
                     los
                     importadores de productos químicos más importantes a nivel nacional. Prueba de esto es su nuevo
                     depósito
@@ -91,11 +90,10 @@
         </div>
     </section>
     <!--Productos-->
-    <section id="productos" class="container py-4">
-        <h2 class="text-center display-4 py-4 mb-4">Productos</h2>
-        <form action="https://formspree.io/f/xjvlapwy" method="POST">
+    <section id="productos" class="container py-5 fadein">
+        <h2 class="text-center display-4 py-5 mb-2">Productos</h2>
             <input type="search" id="busqueda" name="q" class="inputTexto">
-            <input type="submit" value="Buscar" class="btn">
+            <label class="btn">Buscar</label>
             <div class="listadoProductos">
                 <div class="encabezadoTabla sticky-top ProductoTabla">Nombre</div>
                 <div class="encabezadoTabla sticky-top TipoTabla">Tipo de Uso</div>
@@ -145,8 +143,8 @@
             </div>
     </section>
     <!--Servicios-->
-    <section id="servicios" class="container py-4">
-        <h2 class="text-center display-4 py-4 mb-4">Servicios</h2>
+    <section id="servicios" class="container py-5 fadein">
+        <h2 class="text-center display-4 py-5 mb-4">Servicios</h2>
         <div class="row text-center align-items-baseline">
             <div class="col-lg-4 pt-3 hvr-grow cardservicios">
                 <img class="pb-2 iconservicios" src="images/camion.svg" alt="Camion">
@@ -170,8 +168,8 @@
             </div>
     </section>
     <!--Contacto-->
-    <section id="contacto" class="container py-4">
-        <h2 class="text-center display-4 py-4 mb-4">Contactanos</h2>
+    <section id="contacto" class="container py-5 fadein">
+        <h2 class="text-center display-4 py-5 mb-2">Contactanos</h2>
         <div class="row">
             <div class="col-lg-6">
                 <div class="mb-3">
@@ -198,7 +196,7 @@
         </div>
     </section>
     <!--Footer-->
-    <footer class="bg-dark text-white text-center text-lg-start">
+    <footer class="bg-dark text-white text-center text-lg-start fadein">
         <div class="container pt-4 pb-1">
             <div class="row">
                 <div class="col-lg-8 col-md-12 mb-4 mb-md-0">
