Actualización Botones y Márgenes Finales

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </nav>
     <!--Encabezado-->
-    <div id="encabezado" class="px-5 px-lg-0 my-5 py-5 text-center fadein">
+    <div id="encabezado" class="px-5 px-lg-0 py-5 text-center fadein">
         <h1 class="display-5 fw-bold py-4">Marpaq S.A. <br> Productos Químicos para la Industria</h1>
         <div class="col-lg-8 mx-auto">
             <p class="lead mb-4 py-2">Desde 1978, nos hemos desarrollado como <b>importadores y distribuidores</b>
@@ -64,7 +64,6 @@
             </div>
         </div>
     </div>
-    <hr class="featurette-divider">
     <!--Sobre Nosotros-->
     <section id="sobre-nosotros" class="text-justify container py-5 fadein">
         <div class="row">
